Add authenticate user
